--- a/dev/_modules/index.html
+++ b/dev/_modules/index.html
@@ -244,7 +244,8 @@
            <div itemprop="articleBody">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="json/encoder.html">json.encoder</a></li>
+<ul><li><a href="argparse.html">argparse</a></li>
+<li><a href="json/encoder.html">json.encoder</a></li>
 <li><a href="smac/configspace/util.html">smac.configspace.util</a></li>
 <li><a href="smac/epm/base_epm.html">smac.epm.base_epm</a></li>
 <li><a href="smac/epm/base_imputor.html">smac.epm.base_imputor</a></li>
