--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -294,11 +294,21 @@
 </li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunHistory.add">add() (smac.runhistory.runhistory.RunHistory method)</a>
 </li>
+      <li><a href="apidoc/smac.scenario.scenario.html#smac.scenario.scenario.Scenario.add_argument">add_argument() (smac.scenario.scenario.Scenario method)</a>
+
+      <ul>
+        <li><a href="apidoc/smac.utils.io.cmd_reader.html#smac.utils.io.cmd_reader.ConfigurableHelpFormatter.add_argument">(smac.utils.io.cmd_reader.ConfigurableHelpFormatter method)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="apidoc/smac.scenario.scenario.html#smac.scenario.scenario.Scenario.add_argument">add_argument() (smac.scenario.scenario.Scenario method)</a>
+      <li><a href="apidoc/smac.utils.io.cmd_reader.html#smac.utils.io.cmd_reader.ConfigurableHelpFormatter.add_arguments">add_arguments() (smac.utils.io.cmd_reader.ConfigurableHelpFormatter method)</a>
 </li>
       <li><a href="apidoc/smac.utils.io.traj_logging.html#smac.utils.io.traj_logging.TrajLogger.add_entry">add_entry() (smac.utils.io.traj_logging.TrajLogger method)</a>
+</li>
+      <li><a href="apidoc/smac.utils.io.cmd_reader.html#smac.utils.io.cmd_reader.ConfigurableHelpFormatter.add_text">add_text() (smac.utils.io.cmd_reader.ConfigurableHelpFormatter method)</a>
+</li>
+      <li><a href="apidoc/smac.utils.io.cmd_reader.html#smac.utils.io.cmd_reader.ConfigurableHelpFormatter.add_usage">add_usage() (smac.utils.io.cmd_reader.ConfigurableHelpFormatter method)</a>
 </li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunValue.additional_info">additional_info (smac.runhistory.runhistory.RunValue attribute)</a>
 </li>
@@ -362,9 +372,11 @@
 </li>
       <li><a href="apidoc/smac.optimizer.smbo.html#smac.optimizer.smbo.SMBO.config_space">config_space (smac.optimizer.smbo.SMBO attribute)</a>
 </li>
+      <li><a href="apidoc/smac.initial_design.multi_config_initial_design.html#smac.initial_design.multi_config_initial_design.MultiConfigInitialDesign.configs">configs (smac.initial_design.multi_config_initial_design.MultiConfigInitialDesign attribute)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="apidoc/smac.initial_design.multi_config_initial_design.html#smac.initial_design.multi_config_initial_design.MultiConfigInitialDesign.configs">configs (smac.initial_design.multi_config_initial_design.MultiConfigInitialDesign attribute)</a>
+      <li><a href="apidoc/smac.utils.io.cmd_reader.html#smac.utils.io.cmd_reader.ConfigurableHelpFormatter">ConfigurableHelpFormatter (class in smac.utils.io.cmd_reader)</a>
 </li>
       <li><a href="apidoc/smac.configspace.util.html#smac.configspace.util.convert_configurations_to_array">convert_configurations_to_array() (in module smac.configspace.util)</a>
 </li>
@@ -398,11 +410,13 @@
 </li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.DataOrigin">DataOrigin (class in smac.runhistory.runhistory)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.EnumEncoder.default">default() (smac.runhistory.runhistory.EnumEncoder method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.initial_design.default_configuration_design.html#smac.initial_design.default_configuration_design.DefaultConfiguration">DefaultConfiguration (class in smac.initial_design.default_configuration_design)</a>
+</li>
+      <li><a href="apidoc/smac.utils.io.cmd_reader.html#smac.utils.io.cmd_reader.DevHelpAction">DevHelpAction (class in smac.utils.io.cmd_reader)</a>
 </li>
       <li><a href="apidoc/smac.utils.duplicate_filter_logging.html#smac.utils.duplicate_filter_logging.DuplicateFilter">DuplicateFilter (class in smac.utils.duplicate_filter_logging)</a>
 </li>
@@ -419,6 +433,8 @@
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunHistory.empty">empty() (smac.runhistory.runhistory.RunHistory method)</a>
 </li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.EnumEncoder.encode">encode() (smac.runhistory.runhistory.EnumEncoder method)</a>
+</li>
+      <li><a href="apidoc/smac.utils.io.cmd_reader.html#smac.utils.io.cmd_reader.ConfigurableHelpFormatter.end_section">end_section() (smac.utils.io.cmd_reader.ConfigurableHelpFormatter method)</a>
 </li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.EnumEncoder">EnumEncoder (class in smac.runhistory.runhistory)</a>
 </li>
@@ -448,11 +464,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.utils.duplicate_filter_logging.html#smac.utils.duplicate_filter_logging.DuplicateFilter.filter">filter() (smac.utils.duplicate_filter_logging.DuplicateFilter method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.tae.execute_ta_run.html#smac.tae.execute_ta_run.FirstRunCrashedException">FirstRunCrashedException</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.facade.func_facade.html#smac.facade.func_facade.fmin_smac">fmin_smac() (in module smac.facade.func_facade)</a>
+</li>
+      <li><a href="apidoc/smac.utils.io.cmd_reader.html#smac.utils.io.cmd_reader.ConfigurableHelpFormatter.format_help">format_help() (smac.utils.io.cmd_reader.ConfigurableHelpFormatter method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -958,10 +976,10 @@
 </li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#module-smac.runhistory.runhistory">smac.runhistory.runhistory (module)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.runhistory.runhistory2epm.html#module-smac.runhistory.runhistory2epm">smac.runhistory.runhistory2epm (module)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.scenario.html#module-smac.scenario">smac.scenario (module)</a>
 </li>
       <li><a href="apidoc/smac.scenario.scenario.html#module-smac.scenario.scenario">smac.scenario.scenario (module)</a>
@@ -1010,6 +1028,8 @@
 </li>
       <li><a href="apidoc/smac.facade.smac_facade.html#smac.facade.smac_facade.SMAC.solver">solver (smac.facade.smac_facade.SMAC attribute)</a>
 </li>
+      <li><a href="apidoc/smac.utils.io.cmd_reader.html#smac.utils.io.cmd_reader.StandardHelpAction">StandardHelpAction (class in smac.utils.io.cmd_reader)</a>
+</li>
       <li><a href="apidoc/smac.optimizer.smbo.html#smac.optimizer.smbo.SMBO.start">start() (smac.optimizer.smbo.SMBO method)</a>
 
       <ul>
@@ -1026,6 +1046,8 @@
         <li><a href="apidoc/smac.tae.execute_ta_run_old.html#smac.tae.execute_ta_run_old.ExecuteTARunOld.start">(smac.tae.execute_ta_run_old.ExecuteTARunOld method)</a>
 </li>
       </ul></li>
+      <li><a href="apidoc/smac.utils.io.cmd_reader.html#smac.utils.io.cmd_reader.ConfigurableHelpFormatter.start_section">start_section() (smac.utils.io.cmd_reader.ConfigurableHelpFormatter method)</a>
+</li>
       <li><a href="apidoc/smac.stats.stats.html#smac.stats.stats.Stats.start_timing">start_timing() (smac.stats.stats.Stats method)</a>
 </li>
       <li><a href="apidoc/smac.stats.stats.html#smac.stats.stats.Stats">Stats (class in smac.stats.stats)</a>
